# atmega-peripherals-rs

./: Cargo.toml  README.md  gdb.sh
.cargo/: config.toml
.github/workflows/: build.yml  docs.yml
avr-servo/: Cargo.toml
avr-servo/src/: atmega2560.rs  avr_servo.rs  lib.rs
src/: main.rs  max7219.rs  servo.rs
