[package]
name = "avr-servo"
version = "0.1.0"
edition = "2024"
license = "MIT"


[lib]
test = false
bench = false

[dependencies]
embedded-hal = "1.0"
avr-device = { version = "0.8.1", features = ["atmega2560"] }
paste = "1.0.15"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-mega2560"]

[profile.dev]
panic = "abort"
lto = true
opt-level = 's'

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
